Added database connection utility script + route and basic controller for player schema

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,2 +1,7 @@
 NODE_ENV=dev
 LOG_LEVEL=debug
+DB_USER=your_username
+DB_HOST=localhost
+DB_NAME=your_database_name
+DB_PASSWORD=your_password
+DB_PORT=5432
