--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -22,7 +22,8 @@
     "camelcase": 0,
     "import/extensions": 0,
     "@typescript-eslint/no-redeclare": 0,
-    "@typescript-eslint/dot-notation": 0
+    "@typescript-eslint/dot-notation": 0,
+    "import/no-extraneous-dependencies": 0
   },
   "settings": {
     "import/parsers": {
