--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
     "pg": "^8.12.0",
+    "pg-format": "^1.0.4",
     "winston": "^3.13.1"
   },
   "devDependencies": {
