Dynamic balances, inventory, shop, transactions, and purchases
* fixed schema

* added inventory route to get main inventory id for a given player ID

* added backend fetching of inventory items with player id (and by inventory name)

* added route to consume items from inventory

* added wallet routes (untested)

* added tx and shop routes (untested)

* added routes for funding and withdrawing from wallets, refactored relation names

* added spinbox and form for purchases

* got shop purchases working on backend

* got shop search and filters working dynamically

* got transaction history working dynamically

* cleanup after merge

* Inventory and shop populate based on logged in player

* Shop purchases now work

* Balance displayed with live updates

--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -23,7 +23,8 @@
     "import/extensions": 0,
     "@typescript-eslint/no-redeclare": 0,
     "@typescript-eslint/dot-notation": 0,
-    "import/no-extraneous-dependencies": 0
+    "import/no-extraneous-dependencies": 0,
+    "@typescript-eslint/indent": "warn"
   },
   "settings": {
     "import/parsers": {
